# openMpStudy

./: CMakeLists.txt  ParityTransformSort.cpp  Trap.cpp  firstDemo.cpp  hello.cpp  integration_seq.cpp  nested_flowDep.cpp  paiValueEstimation.cpp  parallelFor.cpp  qtThreadsSimple.cpp  scheduleFor.cpp  terminProdCons.cpp
